--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -231,7 +231,7 @@
     <!-- Commits Modal -->
     <div class="modal fade" id="add-evidence-commits__modal" tabindex="-1" aria-labelledby="add-evidence-commits--label" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content commits-modal">
                 <div class="modal-header add-evidence-commits__header">
                     <h4 class="modal-title" id="add-evidence-commits__modal--label">Add Commits</h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
