#Feature fix tabs not working and button

--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -58,6 +58,7 @@ html {
     background: var(--primary-highlight);
     border: none;
     border-radius: 8px;
+    color: var(--surface-highlight);
 
 }
 
